--- a/src/WebAPI/Dockerfile
+++ b/src/WebAPI/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["WebAPI.csproj", "WebAPI/"]
+COPY ["WebAPI.csproj", "."]
 RUN dotnet restore "WebAPI.csproj"
 COPY . .
 RUN dotnet build "WebAPI.csproj" -c Release -o /app/build
