--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       - POSTGRES_DB=${DB_NAME}
     ports: 
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${DB_USER} -d ${DB_NAME}'"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
     profiles:
       - infra
       - full
@@ -23,6 +28,7 @@ services:
       - 8080:80
       - 8443:443
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     profiles:
       - full
