add pgadmin to dev environment

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,10 @@
 **/.vscode
 **/.idea
 
-# docker data
-**/.docker
-
 # build artifacts
 **/obj
 **/bin
 
-# secrets
+# secrets/dev environment
 **/.env
+pgadmin.json
