--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   db:
-    image: postgres:latest
+    image: postgres:16.1-alpine
     container_name: cryptic-db
+    volumes:
+      - cryptic-db:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
@@ -9,54 +11,36 @@ services:
     ports: 
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${DB_USER} -d ${DB_NAME}'"]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB'"]
       interval: 10s
       timeout: 3s
-      retries: 3
-    volumes:
-      - cryptic-db:/var/lib/postgresql/data/
+      retries: 5
     profiles:
-      - dev
-      - prod
+      - full
+      - api
+      - ""
       
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: cryptic-pgadmin
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_USER}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
-    ports:
-      - 5050:80
-    depends_on:
-      db:
-        condition: service_healthy
-    volumes:
-      - cryptic-pgadmin:/var/lib/pgadmin
-      - ./pgadmin.json:/pgadmin4/servers.json:ro
-    profiles:
-      - dev
-
   webapi:
     build:
       context: ./src/WebAPI
       dockerfile: ./Dockerfile
     container_name: cryptic-webapi
     volumes:
-      - ~/.aspnet/https:${CERT_DIR}:ro
+      - ~/.aspnet/https/${CERT_FILE}:/https/${CERT_FILE}:ro
     environment:
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_HTTPS_PORTS=${WEBAPI_HTTPS_PORT}
       - ASPNETCORE_Kestrel__Certificates__Default__Password=${CERT_PASSWORD}
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=${CERT_DIR}/${CERT_FILE}
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/${CERT_FILE}
       - ConnectionStrings__Postgres=Server=db;Port=5432;Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD}
     ports:
-      - 8080:80
-      - 8443:443
+      - ${WEBAPI_HTTP_PORT}:${WEBAPI_HTTP_PORT}
+      - ${WEBAPI_HTTPS_PORT}:${WEBAPI_HTTPS_PORT}
     depends_on:
       db:
         condition: service_healthy
     profiles:
-      - prod
-  
+      - full
+      - api
+
 volumes:
   cryptic-db:
-  cryptic-pgadmin:
