split into 2 projects, begin implementing cqrs, use hs256 for aead, and add structured api responses

--- a/src/WebAPI/Dockerfile
+++ b/src/WebAPI/Dockerfile
@@ -1,17 +1,13 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS publish
 WORKDIR /src
-COPY ["WebAPI.csproj", "."]
-RUN dotnet restore "WebAPI.csproj"
-COPY . .
-RUN dotnet build "WebAPI.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "WebAPI.csproj" -c Release -o /app/publish /p:UseAppHost=false
+COPY [".", "."]
+WORKDIR /src/WebAPI
+RUN dotnet publish "WebAPI.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "WebAPI.dll"]
+ENTRYPOINT ["dotnet", "Cryptic.WebAPI.dll"]
