--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=5432;Database=cryptic;User Id=postgres;Password=password"
+    "Database": "Server=localhost;Port=5432;Database=cryptic;User Id=postgres;Password=password"
   }
 }
