--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,24 +22,26 @@ services:
       
   webapi:
     build:
-      context: ./src/WebAPI
-      dockerfile: ./Dockerfile
+      context: ./src
+      dockerfile: ./WebAPI/Dockerfile
     container_name: cryptic-webapi
     volumes:
-      - ${CERT_HOST_DIR}/${CERT_FILE}:/https/${CERT_FILE}:ro
+      - ${CERT_HOST_DIR}/${CERT_FILE}:/https/${CERT_FILE}
     environment:
       - ASPNETCORE_ENVIRONMENT=${APP_ENVIRONMENT}
       - ASPNETCORE_HTTP_PORTS=${WEBAPI_HTTP_PORT}
       - ASPNETCORE_HTTPS_PORTS=${WEBAPI_HTTPS_PORT}
       - ASPNETCORE_Kestrel__Certificates__Default__Password=${CERT_PASSWORD}
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/${CERT_FILE}
-      - ConnectionStrings__Postgres=Server=db;Port=5432;Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD}
+      - ConnectionStrings__Database=Server=db;Port=5432;Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD}
     ports:
       - ${WEBAPI_HTTP_PORT}:${WEBAPI_HTTP_PORT}
       - ${WEBAPI_HTTPS_PORT}:${WEBAPI_HTTPS_PORT}
     depends_on:
       db:
         condition: service_healthy
+    command:
+      - ls -al
     profiles:
       - full
       - api
