--- a/src/WebAPI/Properties/launchSettings.json
+++ b/src/WebAPI/Properties/launchSettings.json
@@ -10,7 +10,7 @@
         "ASPNETCORE_HTTP_PORTS": "8080",
         "ASPNETCORE_HTTPS_PORTS": "8443",
         "ASPNETCORE_Kestrel__Certificates__Default__Password": "password",
-        "ASPNETCORE_Kestrel__Certificates__Default__Path": "../../.dev/https/cryptic.pfx"
+        "ASPNETCORE_Kestrel__Certificates__Default__Path": "../../.dev/https/https.pfx"
       }
     },
     "http": {
