--- a/server/src/Core/Core.csproj
+++ b/server/src/Core/Core.csproj
@@ -4,8 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>Cryptic.Shared</AssemblyName>
-        <RootNamespace>Cryptic.Shared</RootNamespace>
+        <AssemblyName>Cryptic.Core</AssemblyName>
+        <RootNamespace>Cryptic.Core</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
