add pre-commit hook for formatting and linting client code

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # ide configuration
-**/.vscode/*
-!**/.vscode/extensions.json
+**/.vscode
 **/.idea
 **/*.DotSettings.*
 
 # secrets
 **/.env
+
+# node stuff
+node_modules
