--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,33 @@
 # ide configuration
-**/.vscode
-**/.idea
-**/*.DotSettings.*
+#.vscode
+.idea
 
 # secrets
-**/.env
+.env
 
-# node stuff
-node_modules
+# build files
+bin/
+obj/
+wwwroot/
+
+# packages
+node_modules/
+
+# local files
+*.local
+
+# logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# misc
+.DS_Store
+*.DotSettings.user
+
+# dev files
+.dev/ssl
