--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,5 +16,6 @@
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
+    <PackageVersion Include="StronglyTypedId" Version="1.0.0-beta08" />
   </ItemGroup>
 </Project>
