--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,5 +27,11 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite-env.d.ts", "vite.config.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "vite-env.d.ts",
+    "vite.config.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
+  ]
 }
