add initial note reading ui, include client metadata in read note api response, some cleanup, and npm dependency updates

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app-web-client",
+  "name": "cryptic-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,6 +17,7 @@
     "luxon": "^3.6.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.3.0",
+    "uuid": "^13.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vuetify": "^3.10.9"
@@ -27,6 +28,7 @@
     "@types/argon2-browser": "^1.18.4",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.15.18",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-vue": "^5.2.3",
