--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/prettierrc",
   "endOfLine": "lf",
   "printWidth": 120,
   "plugins": ["prettier-plugin-organize-imports"],
