--- a/client/package.json
+++ b/client/package.json
@@ -1,51 +1,53 @@
 {
   "name": "cryptic-client",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Encrypted note sharing",
+  "productName": "Cryptic",
   "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest"
+    "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "@mdi/font": "^7.4.47",
+    "@quasar/extras": "^1.16.4",
     "argon2-browser": "^1.18.0",
-    "axios": "^1.10.0",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
-    "luxon": "^3.6.1",
-    "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.3.0",
+    "pinia": "^3.0.1",
+    "quasar": "^2.16.0",
     "uuid": "^13.0.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1",
-    "vuetify": "^3.10.9"
+    "vue": "^3.5.22",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/vue": "^8.1.0",
+    "@eslint/js": "^9.14.0",
+    "@quasar/app-vite": "^2.1.0",
     "@types/argon2-browser": "^1.18.4",
-    "@types/luxon": "^3.6.2",
-    "@types/node": "^22.15.18",
+    "@types/node": "^20.5.9",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.27.0",
-    "eslint-plugin-vue": "^10.1.0",
-    "jsdom": "^27.0.0",
-    "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-eslint": "^16.4.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^10.4.0",
+    "globals": "^16.4.0",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "typescript": "^5.9.2",
+    "vite-plugin-checker": "^0.11.0",
     "vite-plugin-node-polyfills": "^0.24.0",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^2.2.8"
+    "vue-eslint-parser": "^10.2.0",
+    "vue-tsc": "^3.0.7"
+  },
+  "engines": {
+    "node": "^28 || ^26 || ^24 || ^22 || ^20",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
