--- a/server/src/Cryptic.Web.Server/Dockerfile
+++ b/server/src/Cryptic.Web.Server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:22 AS node
 
 
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS publish
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS publish
 COPY --from=node . .
 WORKDIR /src
 
@@ -11,13 +11,13 @@ COPY .globalconfig .globalconfig
 COPY Cryptic.Web.sln Cryptic.Web.sln
 COPY Directory.Build.props Directory.Build.props
 COPY Directory.Packages.props Directory.Packages.props
-COPY server/src/Cryptic.Core/ server/Cryptic.Core/
-COPY server/src/Cryptic.Web.Server/ server/Cryptic.Web.Server/
+COPY server/src/Cryptic.Core/ server/src/Cryptic.Core/
+COPY server/src/Cryptic.Web.Server/ server/src/Cryptic.Web.Server/
 
-RUN dotnet publish "server/Cryptic.Web.Server" -c Release -o /app/publish
+RUN dotnet publish "server/src/Cryptic.Web.Server" -c Release -o /app/publish
 
 
-FROM mcr.microsoft.com/dotnet/aspnet:9.0
+FROM mcr.microsoft.com/dotnet/aspnet:10.0
 USER app
 WORKDIR /app
 
